--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
         "@angular/platform-browser": "~13.0.0-next.0",
         "@angular/platform-browser-dynamic": "~13.0.0-next.0",
         "@angular/router": "~13.0.0-next.0",
+        "moment": "^2.29.2",
         "ng": "^0.0.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
         "primeng": "^13.3.2",
         "rxjs": "~7.4.0",
+        "rxjs-compat": "^6.6.7",
+        "sweetalert2": "^11.4.8",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     },
