--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "~13.0.0-next.0",
         "@angular/platform-browser-dynamic": "~13.0.0-next.0",
         "@angular/router": "~13.0.0-next.0",
+        "chart.js": "^3.7.1",
         "date-fns": "^2.28.0",
         "moment": "^2.29.2",
         "ng": "^0.0.0",
